# convolve-nd

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: 1d.rs  audio.rs  image_color.rs  image_monochrome.rs
src/: array.rs  convolve.rs  dimensions.rs  kernel.rs  lib.rs  rescale.rs
